--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,22 +1,72 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginEnd="8dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    android:layout_marginStart="8dp"
-    app:cardCornerRadius="1dp"
-    app:cardElevation="4dp"
-    app:cardPreventCornerOverlap="true"
-    app:cardUseCompatPadding="true">
+<layout>
 
-    <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/tv_list_title"
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.mlsdev.serhii.shoplist.viewmodel.ShoppingListViewModel" />
+    </data>
+
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:textSize="21sp" />
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        app:cardCornerRadius="1dp"
+        app:cardElevation="3dp"
+        app:cardPreventCornerOverlap="true"
+        app:cardUseCompatPadding="true">
 
-</android.support.v7.widget.CardView>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="@dimen/activity_horizontal_margin">
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/tv_list_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.listName}"
+                android:textSize="22sp"
+                android:textStyle="bold" />
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/tv_created_by_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_list_title"
+                android:text="@string/created_by_label" />
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/tv_owner_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_list_title"
+                android:layout_toEndOf="@id/tv_created_by_label"
+                android:layout_toRightOf="@id/tv_created_by_label"
+                android:text="@{viewModel.ownerName}" />
+
+            <!--<android.support.v7.widget.AppCompatTextView-->
+            <!--android:id="@+id/tv_last_edited_label"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@id/tv_created_by_label"-->
+            <!--android:layout_toLeftOf="@+id/tv_last_edited_date"-->
+            <!--android:layout_toStartOf="@id/tv_last_edited_date"-->
+            <!--android:text="@string/last_changed_label"-->
+            <!--android:textColor="#c9c9c9" />-->
+
+            <!--<android.support.v7.widget.AppCompatTextView-->
+            <!--android:id="@id/tv_last_edited_date"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentEnd="true"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_below="@id/tv_created_by_label"-->
+            <!--android:text="@{viewModel.dateLastEditedDate}"-->
+            <!--android:textColor="#c9c9c9" />-->
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
+</layout>
