--- a/app/src/main/res/layout/shop_lists_fragment.xml
+++ b/app/src/main/res/layout/shop_lists_fragment.xml
@@ -1,68 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 
-    <data>
-        <variable
-            name="viewModel"
-            type="com.mlsdev.serhii.shoplist.viewmodel.ShopListsViewModel" />
-    </data>
-
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <RelativeLayout
-            android:id="@+id/rl_data"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/activity_horizontal_margin">
-
-            <android.support.v7.widget.AppCompatTextView
-                android:id="@+id/tv_list_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@{viewModel.listName}"
-                android:textSize="22sp" />
-
-            <android.support.v7.widget.AppCompatTextView
-                android:id="@+id/tv_created_by_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_list_title"
-                android:text="@string/created_by_label" />
-
-            <android.support.v7.widget.AppCompatTextView
-                android:id="@+id/tv_owner_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_list_title"
-                android:layout_toEndOf="@id/tv_created_by_label"
-                android:layout_toRightOf="@id/tv_created_by_label"
-                android:text="@{viewModel.ownerName}" />
-
-            <android.support.v7.widget.AppCompatTextView
-                android:id="@+id/tv_last_edited_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_created_by_label"
-                android:layout_toLeftOf="@+id/tv_last_edited_date"
-                android:layout_toStartOf="@id/tv_last_edited_date"
-                android:text="@string/last_changed_label" />
-
-            <android.support.v7.widget.AppCompatTextView
-                android:id="@id/tv_last_edited_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_below="@id/tv_created_by_label"
-                android:text="@{viewModel.dateLastEditedDate}" />
-        </RelativeLayout>
-
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_shop_lists"
-            style="@style/List"
-            android:layout_below="@id/rl_data" />
+            style="@style/List" />
 
     </RelativeLayout>
 </layout>
