--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
         <item name="android:textColorSecondary">@color/cardview_dark_background</item>
     </style>
 
-    <style name="Toolbar" parent="Widget.AppCompat.Light.ActionBar">
+    <style name="Toolbar" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
         <item name="android:textColorPrimary">@android:color/white</item>
         <item name="android:background">@color/colorPrimary</item>
     </style>
