--- a/app/src/main/res/layout/item_details.xml
+++ b/app/src/main/res/layout/item_details.xml
@@ -8,50 +8,59 @@
             type="com.mlsdev.serhii.shoplist.viewmodel.ShoppingListViewModel" />
     </data>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/activity_horizontal_margin">
+        android:orientation="vertical">
 
-        <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/tv_list_title"
+        <include layout="@layout/toolbar" />
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@{viewModel.listName}"
-            android:textSize="22sp" />
+            android:layout_height="match_parent"
+            android:padding="@dimen/activity_horizontal_margin">
 
-        <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/tv_created_by_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_list_title"
-            android:text="@string/created_by_label" />
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/tv_list_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.listName}"
+                android:textSize="22sp" />
 
-        <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/tv_owner_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_list_title"
-            android:layout_toEndOf="@id/tv_created_by_label"
-            android:layout_toRightOf="@id/tv_created_by_label"
-            android:text="@{viewModel.ownerName}" />
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/tv_created_by_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_list_title"
+                android:text="@string/created_by_label" />
 
-        <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/tv_last_edited_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_created_by_label"
-            android:layout_toLeftOf="@+id/tv_last_edited_date"
-            android:layout_toStartOf="@id/tv_last_edited_date"
-            android:text="@string/last_changed_label" />
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/tv_owner_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_list_title"
+                android:layout_toEndOf="@id/tv_created_by_label"
+                android:layout_toRightOf="@id/tv_created_by_label"
+                android:text="@{viewModel.ownerName}" />
 
-        <android.support.v7.widget.AppCompatTextView
-            android:id="@id/tv_last_edited_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/tv_created_by_label"
-            android:text="@{viewModel.dateLastEditedDate}" />
-    </RelativeLayout>
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/tv_last_edited_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_created_by_label"
+                android:layout_toLeftOf="@+id/tv_last_edited_date"
+                android:layout_toStartOf="@id/tv_last_edited_date"
+                android:text="@string/last_changed_label" />
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@id/tv_last_edited_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/tv_created_by_label"
+                android:text="@{viewModel.dateLastEditedDate}" />
+        </RelativeLayout>
+
+    </LinearLayout>
 </layout>
