--- a/app/src/main/res/menu/item_details_menu.xml
+++ b/app/src/main/res/menu/item_details_menu.xml
@@ -8,4 +8,7 @@
         android:title="@string/edit_menu_item_label"
         app:showAsAction="always" />
 
+    <item android:id="@+id/remove_menu_item"
+        android:title="@string/remove_menu_item"/>
+
 </menu>
