--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -16,7 +16,8 @@
         app:cardCornerRadius="1dp"
         app:cardElevation="3dp"
         app:cardPreventCornerOverlap="true"
-        app:cardUseCompatPadding="true">
+        app:cardUseCompatPadding="true"
+        android:foreground="@drawable/background_selector">
 
         <RelativeLayout
             android:layout_width="match_parent"
