--- a/app/src/main/res/layout/shopping_list_item.xml
+++ b/app/src/main/res/layout/shopping_list_item.xml
@@ -13,7 +13,8 @@
         android:orientation="horizontal"
         android:padding="@dimen/activity_horizontal_margin"
         app:cardElevation="3dp"
-        app:cardUseCompatPadding="true">
+        app:cardUseCompatPadding="true"
+        android:foreground="@drawable/background_selector">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -34,11 +35,11 @@
                 android:id="@+id/btn_remove_item"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:background="@android:color/transparent"
                 android:onClick="@{viewModel.onRemoveItemClicked}"
-                android:padding="6dp"
+                android:padding="8dp"
                 android:scaleType="centerInside"
-                android:src="@mipmap/ic_delete" />
+                android:src="@mipmap/ic_delete"
+                android:background="?attr/actionBarItemBackground"/>
 
         </LinearLayout>
 
