Added a Sign In and Sign Up screens

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#455A64</color>
     <color name="colorAccent">#009688</color>
     <color name="background_color">#3a808080</color>
+    <color name="red">#d73f3f</color>
 </resources>
