--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -1,4 +1,4 @@
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -10,20 +10,22 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="vertical"
-        android:padding="@dimen/activity_vertical_margin"
-        android:gravity="center">
+        android:padding="@dimen/activity_vertical_margin">
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/til_user_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_user_name">
+            android:hint="@string/hint_user_name"
+            app:errorTextAppearance="@style/error_appearance">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:id="@+id/et_user_name"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.userName}" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -31,13 +33,15 @@
             android:id="@+id/til_user_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_user_email">
+            android:hint="@string/hint_user_email"
+            app:errorTextAppearance="@style/error_appearance">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:id="@+id/et_user_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                android:text="@{viewModel.userEmail}" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -45,13 +49,15 @@
             android:id="@+id/til_user_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_user_password">
+            android:hint="@string/hint_user_password"
+            app:errorTextAppearance="@style/error_appearance">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:id="@+id/et_user_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:text="@{viewModel.userPassword}" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -81,6 +87,7 @@
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/background_selector"
+                android:onClick="@{viewModel.onShowSignInScreen}"
                 android:text="@string/btn_sign_in"
                 android:textAllCaps="false"
                 android:textColor="@color/colorPrimaryDark"
