--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -23,8 +23,7 @@
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/et_user_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                style="@style/EditTextStyle"
                 android:text="@{viewModel.userName}" />
 
         </android.support.design.widget.TextInputLayout>
@@ -38,8 +37,7 @@
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/et_user_email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                style="@style/EditTextStyle"
                 android:inputType="textEmailAddress"
                 android:text="@{viewModel.userEmail}" />
 
@@ -54,8 +52,7 @@
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/et_user_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                style="@style/EditTextStyle"
                 android:inputType="textPassword"
                 android:text="@{viewModel.userPassword}" />
 
