--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -35,12 +35,10 @@
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/et_user_email"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    style="@style/EditTextStyle"
                     android:hint="@string/hint_user_email"
                     android:inputType="textEmailAddress"
-                    android:text="@{viewModel.userEmail}"
-                    android:textColor="@color/colorPrimaryDark" />
+                    android:text="@{viewModel.userEmail}" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -52,12 +50,10 @@
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/et_user_password"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    style="@style/EditTextStyle"
                     android:hint="@string/hint_user_password"
                     android:inputType="textPassword"
-                    android:text="@{viewModel.userPassword}"
-                    android:textColor="@color/colorPrimaryDark" />
+                    android:text="@{viewModel.userPassword}" />
 
             </android.support.design.widget.TextInputLayout>
 
