--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -67,6 +67,12 @@
             android:onClick="@{viewModel.onCreateButtonClicked}"
             android:text="@string/btn_create_account" />
 
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/btn_google_sign_in"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
