--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -63,8 +63,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/activity_horizontal_margin"
                 android:background="@drawable/primary_dark_button_selector"
-                android:onClick="@{viewModel.onSignUpButtonClicked}"
+                android:onClick="@{viewModel.onSignIpButtonClicked}"
                 android:text="@string/btn_sign_in" />
+
+            <com.google.android.gms.common.SignInButton
+                android:id="@+id/btn_google_sign_in"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_vertical_margin"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
