--- a/app/src/main/res/layout/shopping_list_item.xml
+++ b/app/src/main/res/layout/shopping_list_item.xml
@@ -10,11 +10,11 @@
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:foreground="@drawable/background_selector"
         android:orientation="horizontal"
         android:padding="@dimen/activity_horizontal_margin"
         app:cardElevation="3dp"
-        app:cardUseCompatPadding="true"
-        android:foreground="@drawable/background_selector">
+        app:cardUseCompatPadding="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,17 +29,27 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@{viewModel.title}"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/tv_bought_by_user"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
+                android:textSize="14sp" />
 
             <android.support.v7.widget.AppCompatImageButton
                 android:id="@+id/btn_remove_item"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
+                android:background="?attr/actionBarItemBackground"
                 android:onClick="@{viewModel.onRemoveItemClicked}"
                 android:padding="8dp"
                 android:scaleType="centerInside"
-                android:src="@mipmap/ic_delete"
-                android:background="?attr/actionBarItemBackground"/>
+                android:src="@mipmap/ic_delete" />
 
         </LinearLayout>
 
