--- a/app/src/main/res/layout/item_details.xml
+++ b/app/src/main/res/layout/item_details.xml
@@ -25,25 +25,50 @@
                 android:layout_height="wrap_content"
                 android:padding="@dimen/activity_horizontal_margin">
 
-                <android.support.v7.widget.AppCompatTextView
-                    android:id="@+id/tv_list_title"
+                <LinearLayout
+                    android:id="@+id/ll_title_wrapper"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@{viewModel.listName}"
-                    android:textSize="22sp" />
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:weightSum="10">
+
+                    <android.support.v7.widget.AppCompatTextView
+                        android:id="@+id/tv_list_title"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="6"
+                        android:text="@{viewModel.listName}"
+                        android:textSize="22sp" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2.75"
+                        android:gravity="center"
+                        android:text="@string/i_do_shopping" />
+
+                    <android.support.v7.widget.SwitchCompat
+                        android:id="@+id/switch_shopping_mode"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.25"
+                        android:checked="false"
+                        android:gravity="center" />
+                </LinearLayout>
 
                 <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/tv_created_by_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_list_title"
+                    android:layout_below="@id/ll_title_wrapper"
                     android:text="@string/created_by_label" />
 
                 <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/tv_owner_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_list_title"
+                    android:layout_below="@id/ll_title_wrapper"
                     android:layout_toEndOf="@id/tv_created_by_label"
                     android:layout_toRightOf="@id/tv_created_by_label"
                     android:text="@{viewModel.ownerName}" />
