--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -13,11 +13,11 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
+        android:foreground="@drawable/background_selector"
         app:cardCornerRadius="1dp"
         app:cardElevation="3dp"
         app:cardPreventCornerOverlap="true"
-        app:cardUseCompatPadding="true"
-        android:foreground="@drawable/background_selector">
+        app:cardUseCompatPadding="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -47,6 +47,15 @@
                 android:layout_toEndOf="@id/tv_created_by_label"
                 android:layout_toRightOf="@id/tv_created_by_label"
                 android:text="@{viewModel.ownerName}" />
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/tv_buyers_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/tv_list_title"
+                android:text="@{viewModel.shoppersNumber}" />
 
         </RelativeLayout>
 
